# cpuinfo-rs

./: .gitmodules  Cargo.toml
cpuinfo/: Cargo.toml
cpuinfo-sys/: Cargo.toml  build.rs
cpuinfo/src/: lib.rs
