[package]
name = "cpuinfo-sys"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@technocreatives.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0.40"
cmake = "0.1.41"
bindgen = "0.51.0"
